--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,77 @@
 body{
-    background: green;
+   background-color: #7E9ABF;
+   margin: 0;
+}
+header{
+    width: 100%;
+    height: 100%;
+}
+.castillo{
+    width: 100%;
+    height: auto;
 }
 section{
-    border: solid 2px blue;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 200px));
+    margin-left: 15px;
+    margin-right: 15px;
+}
+.card{
+    background-color: transparent;
+    text-align: center;
+    width: 200px;
+    height: 250px;
+    border-radius: 15px;
+    box-shadow: 5px black;
+    perspective: 1000px;
+    position: relative;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+.card:hover{
+    transform: rotateY(180deg);
+}
+.front{
+    background-color: #365B73;
+    font-size: large;
+    position: absolute;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    justify-content: center;
+    text-align: center;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    width: 200px;
+    height: 250px;
+    padding-bottom: 5px;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, .5);
+    color: beige;
+}
+.back{
+    background-color: #365B73;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 200px;
+    height: 250px;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    border-radius: 15px;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, .5);
+}  
+.info{
+    margin: auto;
+    color: beige;
     
-}
-.nombres{
-    border: solid red;
-}
-.imagen {
-    height:200px
-   }
+}  
 img {
-    width: auto; 
-    max-height: 100%; 
-   }
+    justify-content: center;
+    width: auto;
+    height: 180px;
+    margin: auto;
+}
