--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,68 @@
+
+* {
+    box-sizing: border-box;
+  }
 body{
-   background-color: #7E9ABF;
-   margin: 0;
-}
-header{
-    width: 100%;
-    height: 100%;
+    background-color: #7E9ABF;
     margin: 0;
     display: flex;
     flex-direction: column;
-}
-.castillo{
+ }
+ .castillo{
     width: 100%;
     height: auto;
+    margin: 0;
+    box-sizing: border-box;
+}
+ header{
+    position: sticky;   
+    top: 0;
+    background-color: #4A4A80;
+    height: 60px ;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    z-index: 1;
+}
+nav{
+    width: 450px;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+}
+.filtro {
+    background-color: #365B73;
+    color: beige;
+    height: auto;
+    width: 200px;
+    border: solid 2px #7E9ABF;
+    border-radius: 5px;
+    margin: auto;
+    padding: 5px;
+    font-size: medium;
+}
+.buscar {
+    background-color: #365B73;
+    color: beige;
+    height: auto;
+    width: 350px;
+    border: solid 2px #7E9ABF;
+    border-radius: 5px;
+    margin: auto;
+    padding: 5px;
+    font-size: medium;
+}
+::placeholder {
+    color: beige;
+}
+.filtro::-webkit-scrollbar{
+    width: 8px;
+}
+.filtro::-webkit-scrollbar-thumb{
+    background-color: #7E9ABF;
+    border-radius: 4px;
 }
 section{
     display: grid;
@@ -68,8 +119,7 @@ section{
 }  
 .info{
     margin: auto;
-    color: beige;
-    
+    color: beige;  
 }  
 img {
     justify-content: center;
@@ -79,46 +129,4 @@ img {
 }
 .nombre {
     margin: 10px;
-}
-nav {
-    background-color: #4A4A80;
-    height: 60px ;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0;
-   
-}
-.filtro {
-    background-color: #365B73;
-    color: beige;
-    height: auto;
-    width: 200px;
-    border: solid 2px #7E9ABF;
-    border-radius: 5px;
-    margin: auto;
-    padding: 5px;
-    font-size: medium;
-
-}
-.buscar {
-    background-color: #365B73;
-    color: beige;
-    height: auto;
-    width: 250px;
-    border: solid 2px #7E9ABF;
-    border-radius: 5px;
-    margin: auto;
-    padding: 5px;
-    font-size: medium;
-}
-::placeholder {
-    color: beige;
-}
-.filtro::-webkit-scrollbar{
-    width: 8px;
-}
-.filtro::-webkit-scrollbar-thumb{
-    background-color: #7E9ABF;
-    border-radius: 4px;
 }
